# ForbiddenDesert

./: .gitignore  .~lock.ForbiddenDesert.v11.suo.doc#  ArcheologistButton.cpp  ArcheologistButton.h  ArcheologistCharacter.cpp  ArcheologistCharacter.h  Button.cpp  Button.h  CMakeLists.txt  Character.cpp  Character.h  Character.hpp  ChoosePlayer.cpp  ChoosePlayer.h  ChoosePlayer.hpp  ClimberButton.cpp  ClimberButton.h  ClimberButton.hpp  ClimberCharacter.cpp  ClimberCharacter.h  ExplorerButton.cpp  ExplorerButton.h  ExplorerCharacter.cpp  ExplorerCharacter.h  ExplorerCharacter.hpp  ForbiddenDesert  ForbiddenDesert.cbp  ForbiddenDesert.v11.suo.doc  ForbidenDesert  ForbidenDesert.cbp  Game.cpp  Game.h  Game.hpp  MeteorologistButton.cpp  MeteorologistButton.h  MeteorologistButton.hpp  MeteorologistCharacter.cpp  MeteorologistCharacter.h  MeteorologistCharacter.hpp  NavigatorButton.cpp  (+44 more)
cmake/: FindAllegro5.cmake
include/: ArcheologistButton.hpp  ArcheologistCharacter.hpp  Button.hpp  ChoosePlayer.hpp  ClimberCharacter.hpp  ExplorerButton.hpp  Game.hpp  MultiPlayerGame.hpp  NavigatorButton.hpp  NavigatorCharacter.hpp  Packages.hpp  Part.hpp  SinglePlayerGame.hpp  StartMenu.hpp  Tile.hpp  WaterCarrierButton.hpp  WaterCarrierCharacter.hpp  allegro.hpp  def.hpp  polonet.h
src/: ArcheologistCharacter.cpp  Button.cpp  Character.cpp  ChoosePlayer.cpp  ClimberButton.cpp  ClimberCharacter.cpp  ExplorerCharacter.cpp  Game.cpp  MeteorologistButton.cpp  MeteorologistCharacter.cpp  MultiPlayerGame.cpp  NavigatorButton.cpp  NavigatorCharacter.cpp  Packages.cpp  SinglePlayerGame.cpp  StartMenu.cpp  StormCard.cpp  Tile.cpp  WaterCarrierCharacter.cpp  allegro.cpp  fsmInit.cpp  main.cpp
testingAllegro/: hello  hello.c
